correction de bug
Refactor input handling in LecureConsole and update grade selection methods in Marine and Section classes